<resources>
    <string name="app_name">Layout</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bSignin">LOGIN</string>
    <string name="tData">DATA ANDA</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil password</string>
    <string name="label2">Login Succesfull</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="epass">Masukan Password</string>
    <string name="erepass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="JLakiLaki">Laki-Laki</string>
    <string name="Jperempuan">Perempuan</string>
</resources>